--- a/pkg/debian/debian/changelog
+++ b/pkg/debian/debian/changelog
@@ -1,3 +1,9 @@
+surface-ipts-firmware (1.0.0-2) unstable; urgency=medium
+
+  * Bump pkgrel
+
+ -- Dorian Stoll <dorian.stoll@tmsp.io>  Tue, 31 Mar 2020 14:04:37 +0200
+
 surface-ipts-firmware (1.0.0) unstable; urgency=medium
 
   * Initial release.
