--- a/pkg/debian/debian/changelog
+++ b/pkg/debian/debian/changelog
@@ -1,3 +1,9 @@
+surface-ipts-firmware (20200929-1) unstable; urgency=medium
+
+  * Bump release to build for Fedora 33
+
+ -- Dorian Stoll <dorian.stoll@tmsp.io>  Tue, 29 Sep 2020 18:24:15 +0200
+
 surface-ipts-firmware (20200402-1) unstable; urgency=medium
 
   * Bump package version to align across distributions
